[package]
name = "tic-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tic_lib = { path = "../tic-lib" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.0"
rand = "0.8.3"
tokio = { version = "1.9.0", features = ["full"] }
